fix scrollbar appearing

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -4,4 +4,15 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	padding: 0;
+	border: 0;
+	margin: 0;
+}
+
+html,
+* {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
